[package]
name = "cubecode_a000"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.23.0"
gl = "0.14.0"
thiserror = "1.0.50"
image = "0.24.7"
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"] }
rand = "0.8.5"